fix IE overflow issue

--- a/app/styles/styles.sass
+++ b/app/styles/styles.sass
@@ -61,9 +61,14 @@ li.product
 
 #treemap-root
   position: relative
+  overflow: hidden
 #treemap-root-inner 
   position: absolute
   margin-top: 0px
+#treemap-svg
+  overflow: hidden
+  width: 630px
+  height: 560px
 #budget-addunit-result
   margin: 20px
 #addunit-value-group .alert
